# DictTyper

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  main.py  pyproject.toml
src/dict_typer/: config.py  main.py
src/dict_typer/consts/dict_typer/transform/: dict_namer.py
src/dict_typer/transform/: _transformer.py  dict_namer.py  modify_file.py
